# PyLibTiff

./: .gitignore  CMakeLists.txt  README.rst
examples/: Image.py  TiffImage.py  pytiffinfo  test_TiffImage.py
src/: CMakeLists.txt  LibTiff.i  pytiff.c  pytiff.h  std_typedef.i  vararg.c  vararg.h
src/vararg-build/: vararg.sh  vararg.steer  vararg_c  vararg_h
